syntax = "proto3";

option go_package = "./proto/product";

package go.micro.service;

service Product {
  rpc AddProduct(ProductInfo) returns (ResponseProduct){}
  rpc DeductInvetory(OrderDetailReq) returns (OrderProductResp) {}
}

message ProductInfo {
  int64 id = 1;
  string product_name = 2;
  string product_sku = 3;
  double product_price = 4;
  string product_description = 5;
  int64 product_category_id = 6;
}

message ResponseProduct {
  int64 product_id = 1;
}

message OrderDetailReq {
  repeated OrderDetailItem order_detail = 1;
}

message OrderDetailItem {
  int64 id = 1;
  int64 product_id = 2;
  int64 product_num = 3;
  int64 product_size_id = 4;
  int64 OrderId = 5;
}

message OrderProductResp {
  string StatusCode = 1;
}